firebase-debug.log
[debug] [2022-12-03T18:55:08.785Z] ----------------------------------------------------------------------
[debug] [2022-12-03T18:55:08.786Z] Command:       /opt/homebrew/Cellar/node/19.2.0/bin/node /opt/homebrew/bin/firebase emulators:start
[debug] [2022-12-03T18:55:08.787Z] CLI Version:   11.16.1
[debug] [2022-12-03T18:55:08.787Z] Platform:      darwin
[debug] [2022-12-03T18:55:08.787Z] Node Version:  v19.2.0
[debug] [2022-12-03T18:55:08.787Z] Time:          Sat Dec 03 2022 13:55:08 GMT-0500 (Eastern Standard Time)
[debug] [2022-12-03T18:55:08.787Z] ----------------------------------------------------------------------
[debug] 
[debug] [2022-12-03T18:55:08.828Z] > command requires scopes: ["email","openid","https://www.googleapis.com/auth/cloudplatformprojects.readonly","https://www.googleapis.com/auth/firebase","https://www.googleapis.com/auth/cloud-platform"]
[debug] [2022-12-03T18:55:08.829Z] > authorizing via signed-in user (zaneahmed4@gmail.com)
[info] i  emulators: Starting emulators: functions {"metadata":{"emulator":{"name":"hub"},"message":"Starting emulators: functions"}}
[debug] [2022-12-03T18:55:09.010Z] [logging] Logging Emulator only supports listening on one address (127.0.0.1). Not listening on ::1
[debug] [2022-12-03T18:55:09.010Z] assigned listening specs for emulators {"user":{"hub":[{"address":"127.0.0.1","family":"IPv4","port":4400},{"address":"::1","family":"IPv6","port":4400}],"ui":[{"address":"127.0.0.1","family":"IPv4","port":4000},{"address":"::1","family":"IPv6","port":4000}],"logging":[{"address":"127.0.0.1","family":"IPv4","port":4500}]},"metadata":{"message":"assigned listening specs for emulators"}}
[debug] [2022-12-03T18:55:09.014Z] [hub] writing locator at /var/folders/sm/nyhs1sdn6sgdz8t5gxhvc7wc0000gn/T/hub-wellbell-4a40d.json
[debug] [2022-12-03T18:55:09.143Z] [functions] Functions Emulator only supports listening on one address (127.0.0.1). Not listening on ::1
[debug] [2022-12-03T18:55:09.144Z] [eventarc] Eventarc Emulator only supports listening on one address (127.0.0.1). Not listening on ::1
[debug] [2022-12-03T18:55:09.144Z] late-assigned ports for functions and eventarc emulators {"user":{"hub":[{"address":"127.0.0.1","family":"IPv4","port":4400},{"address":"::1","family":"IPv6","port":4400}],"ui":[{"address":"127.0.0.1","family":"IPv4","port":4000},{"address":"::1","family":"IPv6","port":4000}],"logging":[{"address":"127.0.0.1","family":"IPv4","port":4500}],"functions":[{"address":"127.0.0.1","family":"IPv4","port":5001}],"eventarc":[{"address":"127.0.0.1","family":"IPv4","port":9299}]},"metadata":{"message":"late-assigned ports for functions and eventarc emulators"}}
[warn] ⚠  functions: The following emulators are not running, calls to these services from the Functions emulator will affect production: auth, firestore, database, hosting, pubsub, storage {"metadata":{"emulator":{"name":"functions"},"message":"The following emulators are not running, calls to these services from the Functions emulator will affect production: \u001b[1mauth, firestore, database, hosting, pubsub, storage\u001b[22m"}}
[warn] ⚠  Your requested "node" version "16" doesn't match your global version "19". Using node@19 from host. {"metadata":{"emulator":{"name":"functions"},"message":"Your requested \"node\" version \"16\" doesn't match your global version \"19\". Using node@19 from host."}}
[debug] [2022-12-03T18:55:09.146Z] defaultcredentials: writing to file /Users/zane/.config/firebase/zaneahmed4_gmail_com_application_default_credentials.json
[debug] [2022-12-03T18:55:09.150Z] Setting GAC to /Users/zane/.config/firebase/zaneahmed4_gmail_com_application_default_credentials.json {"metadata":{"emulator":{"name":"functions"},"message":"Setting GAC to /Users/zane/.config/firebase/zaneahmed4_gmail_com_application_default_credentials.json"}}
[debug] [2022-12-03T18:55:09.151Z] >>> [apiv2][query] GET https://firebase.googleapis.com/v1beta1/projects/wellbell-4a40d/adminSdkConfig [none]
[debug] [2022-12-03T18:55:09.507Z] <<< [apiv2][status] GET https://firebase.googleapis.com/v1beta1/projects/wellbell-4a40d/adminSdkConfig 200
[debug] [2022-12-03T18:55:09.507Z] <<< [apiv2][body] GET https://firebase.googleapis.com/v1beta1/projects/wellbell-4a40d/adminSdkConfig {"projectId":"wellbell-4a40d","databaseURL":"https://wellbell-4a40d-default-rtdb.firebaseio.com","storageBucket":"wellbell-4a40d.appspot.com"}
[debug] [2022-12-03T18:55:09.526Z] Ignoring unsupported arg: auto_download {"metadata":{"emulator":{"name":"ui"},"message":"Ignoring unsupported arg: auto_download"}}
[debug] [2022-12-03T18:55:09.527Z] Ignoring unsupported arg: port {"metadata":{"emulator":{"name":"ui"},"message":"Ignoring unsupported arg: port"}}
[debug] [2022-12-03T18:55:09.527Z] Starting Emulator UI with command {"binary":"node","args":["/Users/zane/.cache/firebase/emulators/ui-v1.11.1/server/server.js"],"optionalArgs":[],"joinArgs":false} {"metadata":{"emulator":{"name":"ui"},"message":"Starting Emulator UI with command {\"binary\":\"node\",\"args\":[\"/Users/zane/.cache/firebase/emulators/ui-v1.11.1/server/server.js\"],\"optionalArgs\":[],\"joinArgs\":false}"}}
[info] i  ui: Emulator UI logging to ui-debug.log {"metadata":{"emulator":{"name":"ui"},"message":"Emulator UI logging to \u001b[1mui-debug.log\u001b[22m"}}
[debug] [2022-12-03T18:55:09.614Z] Web / API server started at 127.0.0.1:4000
 {"metadata":{"emulator":{"name":"ui"},"message":"Web / API server started at 127.0.0.1:4000\n"}}
[debug] [2022-12-03T18:55:09.614Z] Web / API server started at ::1:4000
 {"metadata":{"emulator":{"name":"ui"},"message":"Web / API server started at ::1:4000\n"}}
[info] i  functions: Watching "/Users/zane/Desktop/WellBell_front-end/functions" for Cloud Functions... {"metadata":{"emulator":{"name":"functions"},"message":"Watching \"/Users/zane/Desktop/WellBell_front-end/functions\" for Cloud Functions..."}}
[debug] [2022-12-03T18:55:09.789Z] Validating nodejs source
[warn] ⚠  functions: package.json indicates an outdated version of firebase-functions. Please upgrade using npm install --save firebase-functions@latest in your functions directory. 
[warn] ⚠  functions: Please note that there will be breaking changes when you upgrade. 
[debug] [2022-12-03T18:55:10.434Z] > [functions] package.json contents: {
  "name": "functions",
  "description": "Cloud Functions for Firebase",
  "scripts": {
    "lint": "eslint .",
    "serve": "firebase emulators:start --only functions",
    "shell": "firebase functions:shell",
    "start": "npm run shell",
    "deploy": "firebase deploy --only functions",
    "logs": "firebase functions:log"
  },
  "engines": {
    "node": "16"
  },
  "main": "index.js",
  "dependencies": {
    "firebase-admin": "^10.0.2",
    "firebase-functions": "^3.18.0"
  },
  "devDependencies": {
    "eslint": "^8.9.0",
    "eslint-config-google": "^0.14.0",
    "firebase-functions-test": "^0.2.0"
  },
  "private": true
}
[debug] [2022-12-03T18:55:10.434Z] Building nodejs source
[debug] [2022-12-03T18:55:10.434Z] Analyzing nodejs backend spec
[debug] [2022-12-03T18:55:10.436Z] Could not find functions.yaml. Must use http discovery
[debug] [2022-12-03T18:55:10.519Z] Serving at port 9005

[debug] [2022-12-03T18:55:10.525Z] Got response from /__/functions.yaml Failed to generate manifest from function source: SyntaxError: Cannot use import statement outside a module
[debug] [2022-12-03T18:55:10.526Z] Failed to parse functions.yamlincomplete explicit mapping pair; a key node is missed; or followed by a non-tabulated empty line at line 1, column 62:
     ... rom function source: SyntaxError: Cannot use import statement ou ... 
                                         ^ {"name":"YAMLException","reason":"incomplete explicit mapping pair; a key node is missed; or followed by a non-tabulated empty line","mark":{"name":null,"buffer":"Failed to generate manifest from function source: SyntaxError: Cannot use import statement outside a module\n\u0000","position":61,"line":0,"column":61},"message":"incomplete explicit mapping pair; a key node is missed; or followed by a non-tabulated empty line at line 1, column 62:\n     ... rom function source: SyntaxError: Cannot use import statement ou ... \n                                         ^"}
[debug] [2022-12-03T18:55:10.530Z] shutdown requested via /__/quitquitquit

[error] ⬢  functions: Failed to load function definition from source: FirebaseError: Failed to load function definition from source: Failed to generate manifest from function source: SyntaxError: Cannot use import statement outside a module {"metadata":{"emulator":{"name":"functions"},"message":"Failed to load function definition from source: FirebaseError: Failed to load function definition from source: Failed to generate manifest from function source: SyntaxError: Cannot use import statement outside a module"}}
[info] 
┌─────────────────────────────────────────────────────────────┐
│ ✔  All emulators ready! It is now safe to connect your app. │
│ i  View Emulator UI at http://127.0.0.1:4000/               │
└─────────────────────────────────────────────────────────────┘

┌───────────┬────────────────┬─────────────────────────────────┐
│ Emulator  │ Host:Port      │ View in Emulator UI             │
├───────────┼────────────────┼─────────────────────────────────┤
│ Functions │ 127.0.0.1:5001 │ http://127.0.0.1:4000/functions │
└───────────┴────────────────┴─────────────────────────────────┘
  Emulator Hub running at 127.0.0.1:4400
  Other reserved ports: 4500

Issues? Report them at https://github.com/firebase/firebase-tools/issues and attach the *-debug.log files.
 
